# Inkplate

./: .gitattributes  .gitignore  Cargo.toml  README.md  TODO.md  rustfmt.toml
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/engine/: color.rs  foreground.rs  halftone.rs  layer.rs  mod.rs  morphology.rs  palette.rs  pipeline.rs  preprocess.rs  tone.rs
src/engine/dither/: bayer.rs  blue_noise.rs  floyd_steinberg.rs  mod.rs  white_noise.rs
src/engine/extractors/: channel_calc.rs  cmyk_channel.rs  color_range.rs  gcr_black.rs  hsb_brightness_inverted.rs  index_assignment.rs  lab_lightness_inverted.rs  luminance_threshold.rs  mod.rs  spot_aa.rs  spot_solid.rs
src/engine/workflows/: auto_detect.rs  black_only.rs  cel_shaded.rs  cmyk_process.rs  curves.rs  duotone.rs  index.rs  mod.rs  simprocess.rs  single_halftone.rs  spot.rs  stencil.rs  tritone.rs
src/export/: border.rs  contact_sheet.rs  film.rs  mod.rs  reg_marks.rs
src/gui/: app.rs  history.rs  mod.rs  processing.rs  state.rs  textures.rs  worker.rs
src/gui/panels/: global.rs  inspector.rs  layers.rs  mod.rs  preview.rs
src/gui/widgets/: mod.rs
src/presets/: mod.rs
src/project/: mod.rs
