[package]
name = "inkplate"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Screen-printing color separation tool with a continuous-tone density-map engine."
license = "GPL-3.0-or-later"
repository = "https://github.com/Jyard1/Inkplate"
readme = "README.md"
keywords = ["screen-printing", "halftone", "color-separation", "image-processing", "graphics"]
categories = ["graphics", "multimedia::images"]

[lib]
name = "inkplate"
path = "src/lib.rs"

[[bin]]
name = "inkplate"
path = "src/main.rs"

[dependencies]
# Image I/O and basic ops (PIL replacement)
image = { version = "0.25", features = ["png", "jpeg", "tiff", "webp"] }
# Direct dep on the png crate so film export can write the pHYs DPI
# chunk through the encoder API instead of splicing bytes.
png = "0.17"
imageproc = "0.25"
ab_glyph = "0.2"

# Numeric / array operations (numpy replacement)
ndarray = { version = "0.16", features = ["rayon"] }
rayon = "1.10"

# Color science (LAB conversion, ΔE, HSL/HSV)
palette = { version = "0.7", default-features = false, features = ["std"] }

# GUI
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }

# Native file dialogs
rfd = "0.15"

# Serialization for .inkplate project files
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Identifiers, errors, utilities
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
thiserror = "1"
once_cell = "1"

[dev-dependencies]
approx = "0.5"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 1          # dev builds stay snappy, but image loops don't crawl
debug = true
